# tidalapi-cpp

./: .gitignore  CMakeLists.txt  README.md
headers/: error.h  utils.h
include/tidalapi-cpp/: album.h  artist.h  config.h  genre.h  login.h  lyrics.h  media.h  mix.h  page.h  playlist.h  quality.h  session.h  stream.h  tidalapi-cpp.h  tidalapi.h  track.h  user.h  video.h
src/: config.cpp  error.cpp  login.cpp  playlist.cpp  session.cpp  tidalapi-cpp.cpp  tidalapi.cpp  user.cpp  utils.cpp
